[DOCKER] Actualizado knockd.conf para usar distintos protocolos y poder cerrar el puerto

--- a/docker/knockd.conf
+++ b/docker/knockd.conf
@@ -2,13 +2,13 @@
         logfile = /var/log/knockd.log
         
 [openSSH]
-        sequence    = 2000,3000,4000
+        sequence    = 2000:udp,3000:tcp,4000:udp
         seq_timeout = 5
         command     = /sbin/iptables -I INPUT 1 -s %IP% -p tcp --dport 22 -j ACCEPT # -I INPUT 1 para que siempre sea la primera regla 
         tcpflags    = syn
 
 [closeSSH]
-        sequence    = 4000,3000,2000
+        sequence    = 4000:udp,3000:tcp,2000:udp
         seq_timeout = 5
-        command     = /sbin/iptables -D INPUT -s %IP% -p tcp --dport 22 -j ACCEPT
+        command     = /sbin/iptables -D INPUT 1
         tcpflags    = syn
